2006-11-06  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTextView_actions.m:
	* Source/NSOpenPanel.m:
	* Source/GSLayoutManager.m:
	* Source/NSLayoutManager.m:
	* Source/NSSavePanel.m:
	* Source/NSTextView.m:
	* Source/NSStringDrawing.m:
	* Headers/Additions/GNUstepGUI/GSLayoutManager_internal.h:
	* Headers/AppKit/NSTextView.h: Remove underscores from category names
	as they can confuse the debugger.

2006-11-05  Matt Rice  <ratmice@yahoo.com>
	
	* Source/NSSlider.m (-keyDown:): Implement, Fixes bug #14000.
	* Source/NSSliderCell.m (-trackMouse:...): Fix allows tick marks
	only mouse tracking.
	
2006-11-05  Matt Rice  <ratmice@yahoo.com>

	* Source/NSColorPanel.m: Implement -worksWhenModal:. Fixes bug #9417.

2006-11-02  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTableView (_editNextCellAfterRow:inColumn:): 
	Wrap around when number of rows is exceeded.
	
2006-11-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/GSInfoPanel.m:
	Merge in changes from theme branch...
	Support tiling when drawing button cells.
	Make theme panel link visible, as someone suggested that having
	it totally hidden was not so good. Perhaps make it more explicit
	in future?

2006-11-01  Matt Rice  <ratmice@yahoo.com>
	
	* Source/NSTableView.m:
	(-editColumn:row:withEvent:select:): Raise when passed an unselected
	row.
	(-textDidEndEditing:): Handle NSReturnTextMovement.
	(_editNextCellAfterRow:inColumn:): New private method.
	

2006-11-01  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTableView.m: Add new private methods.
	(-mouseDown:): Reorganize and don't track cells until dragging 
	has been ruled out.
	* Source/NSCell.m (trackMouse:inRect:ofView:untilMouseUp:):
	Handle events no longer in the queue.
	* Source/GSDragView.m: Change NSLog to NSDebugLLog.

2006-10-31  Matt Rice  <ratmice@yahoo.com>

	*  Tools/gopen.m
	*  Source/NSView.m
	*  Source/GSPDFPrintOperation.m
	*  Source/NSHelpManager.m
	*  Source/GSHelpManagerPanel.m: Add missing includes.
